--- a/src/components/editor/editor.module.css
+++ b/src/components/editor/editor.module.css
@@ -1,12 +1,15 @@
-.editor{
-    flex-basis: 50%;
-    background-color: aqua;
+@value makerGreen, makerLightGrey from '../../common/colors.css';
+
+.editor {
+  flex-basis: 50%;
+  border-right: 1px solid makerLightGrey;
+  padding: 0.5em 2em;
+  background-color: white;
 }
 
 .title {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 1em;
-    color: makerGreen;
-  }
-  
+  width: 100%;
+  text-align: center;
+  margin-bottom: 1em;
+  color: makerGreen;
+}
