--- a/src/components/image_file_input/image_file_input.module.css
+++ b/src/components/image_file_input/image_file_input.module.css
@@ -1,9 +1,11 @@
-@value makerLightGrey from '../../common/colors.css';
+@value makerLightPink, makerLightGrey from '../../common/colors.css';
 
 .container{
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .input{
@@ -12,6 +14,7 @@
 
 .button{
     width: 100%;
+    height: 100%;
     background-color: makerLightGrey;
     font-weight: bold;
     cursor: pointer;
@@ -20,7 +23,33 @@
     font-size: 0.8rem;
 }
 
+.button.grey{
+    background-color: makerLightGrey;
+}
+
+.button.pink{
+    background-color: makerLightPink;
+}
+
 .button:hover{
     opacity: 0.8;
 }
 
+.loading {
+    width: 1.8em;
+    height: 1.8em;
+    border-radius: 50%;
+    border: 3px solid makerLightGrey;
+    border-top: 3px solid makerLightPink;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+
+}
